fix: resolve all 19 QA findings — tests, coverage, build infrastructure
QA Checkpoint 7 Resolution Summary:
- 726 tests pass (0 failures, 0 errors) across all 7 modules
- Full 'mvn clean verify' BUILD SUCCESS

CRITICAL fixes:
- Issue 1/15: AuthenticationFilterTest constructor — add ReactiveRedisTemplate mock
  (unblocks all 71 API Gateway tests)
- Issue 10: OrderSagaOrchestratorTest — mock saveAndFlush() instead of save()
  (unblocks all 14 Saga unit tests)
- Issue 8/11/12/16: Add maven-failsafe-plugin to catalog-service, order-service,
  and account-service POMs with integration-test/verify goals
  (unblocks 54 integration tests: 13 catalog + 34 order + 8 account ITs)
- Issue 15: Full project build succeeds — all modules compile and test

MAJOR fixes:
- Issue 2: AccountController.resolveAuthenticatedUser() handles both String and
  UserDetails principals for @WithMockUser compatibility
- Issue 3: AccountServiceTest mocks updated to use findById() + passwordEncoder.matches()
  matching actual service implementation
- Issue 4: Add @Mock PasswordEncoder and StringRedisTemplate to AccountServiceTest
- Issue 5/9/13: Coverage now exceeds 80% in all 3 services
  (account: 83.7%, catalog: 82.1%, order: 80.3%)
- Issue 6: Add @WithMockUser to 5 POST inventory test methods in ItemControllerTest
- Issue 14: Create 117 migration module tests (SchemaMapperTest, DataExporterTest,
  DataLoaderTest, IntegrityValidatorTest)
- Issue 19: Add DualWriteConfigTest to all 3 services

MINOR fixes:
- Issue 7: Fix InventoryServiceTest to mock reservationRepository for restore test
- Issue 17: Add JaCoCo check goal with 80% minimum to all 3 service POMs
- Issue 18: Replace all Optional.get() with orElseThrow() across entire project
  (35 modernizer violations fixed, now 0 project-wide)

Additional fixes discovered during validation:
- Spring Boot fat JAR + failsafe classpath: add <classifier>exec</classifier>
- OrderSagaIT WireMock lifecycle: replace @RegisterExtension with static initializer